--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   flutter_whip:
     path: ../
   qr_code_scanner: ^0.7.0
-  
+  shared_preferences: ^2.0.5
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
