--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,15 +4,15 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
   cupertino_icons: ^1.0.0
   flutter:
     sdk: flutter
-  flutter_icons: ^1.0.0
   flutter_whip:
     path: ../
+  lints: ^2.1.1
   qr_code_scanner: ^0.7.0
   shared_preferences: ^2.0.5
 
