--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,12 +3,12 @@ version: 0.5.4
 description: WebRTC-HTTP ingestion protocol (WHIP) library for flutter.
 homepage: https://github.com/cloudwebrtc/flutter-whip.git
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
   events2: ^1.0.0
-  flutter_webrtc: ^0.9.23
-  http: ^0.13.3
+  flutter_webrtc: ^0.9.41
+  http: ^1.1.0
   sdp_transform: ^0.3.2
   uuid: ^3.0.3 
   web_socket_channel: ^2.0.0
@@ -16,5 +16,5 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  pedantic: ^1.9.0
-  test: ^1.6.7
+  lints: ^2.1.1
+  test: any
