--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
   flutter_whip:
     path: ../
   lints: ^2.1.1
-  qr_code_scanner: ^0.7.0
+  qr_code_scanner:
+    git:
+      url: https://github.com/flutter-webrtc/qr_code_scanner.git
+      ref: fix/build-error-for-web
   shared_preferences: ^2.0.5
 
 dev_dependencies:
