--- a/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = flutter_whip_example_app
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.cloudwebrtc.flutter-whip.example.flutterWhipExampleApp
+PRODUCT_BUNDLE_IDENTIFIER = com.github.flutter-whip.example.flutterWhipExampleApp
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2022 com.cloudwebrtc.flutter-whip.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.github.flutter-whip.example. All rights reserved.
